# codilify

./: README.md  pyproject.toml
src/: codilify.py
src/codilify/: __init__.py
